# mpl

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  GLOSSARY.md  README.md  RELEASE.md  docker-compose.yaml  mpl-config.yaml
.cargo/: audit.toml
.github/workflows/: ci.yaml  registry.yaml  release.yaml
crates/mpl-bench/: Cargo.toml
crates/mpl-bench/examples/: sample_cases.jsonl
crates/mpl-bench/src/: main.rs
crates/mpl-cli/: Cargo.toml
crates/mpl-cli/src/: main.rs
crates/mpl-cli/src/commands/: add_tool.rs  conformance.rs  init.rs  mod.rs  proxy.rs  qom_evaluate.rs  schemas.rs
crates/mpl-cli/src/ui/: index.html
crates/mpl-core/: Cargo.toml
crates/mpl-core/src/: groundedness.rs  lib.rs  ontology.rs  qom.rs  stype.rs
crates/mpl-core/tests/: conformance_test.rs  integration_test.rs
crates/mpl-protocol/: Cargo.toml
crates/mpl-protocol/benches/: qom_compute.rs  semantic_hash.rs
crates/mpl-protocol/src/: assertions.rs  determinism.rs  envelope.rs  error.rs  groundedness.rs  handshake.rs  hash.rs  lib.rs  metrics.rs  ontology.rs  policy.rs  qom.rs  stype.rs  util.rs  validation.rs
crates/mpl-protocol/tests/: conformance_test.rs  integration_test.rs
crates/mpl-proxy/: Cargo.toml
crates/mpl-proxy/src/: config.rs  handlers.rs  lib.rs  main.rs  metrics.rs  middleware.rs  proxy.rs  qom_recorder.rs  traffic.rs
crates/mpl-proxy/tests/: a2a_integration_test.rs  mcp_integration_test.rs  mpl_validation_test.rs  proxy_e2e_test.rs  rmcp_integration_test.rs
crates/mpl-proxy/~/.mpl/qom/: qom_events.jsonl
crates/mpl-python/: Cargo.toml
crates/mpl-python/src/: lib.rs
crates/mpl-registry-api/: Cargo.toml
crates/mpl-registry-api/src/: cache.rs  error.rs  handlers.rs  lib.rs  main.rs  routes.rs  state.rs
crates/mpl-registry-api/tests/: api_test.rs
crates/mplx/: Cargo.toml
crates/mplx/src/: main.rs
crates/mplx/src/commands/: add_profile.rs  add_stype.rs  conformance.rs  hash.rs  init.rs  lint.rs  proxy.rs  qom_evaluate.rs  schemas.rs  ui.rs  validate.rs
docs/: adversarial-robustness.md  ai-safety-risk-alignment.md  challenges.md  conceptual-model.md  configuration-reference.md  getting-started.md  gtm.md  implementation-feasibility-analysis.md  implementation-guide.md  industry-paper-outline.md  integration-modes.md  integration-simplification.md  market-assessment.md  mpl-vs-evolving-protocols.md  mpl-vs-schema-registries.md  mpl-with-a2a.md  mpl-with-mcp.md  mvp-scope.md  plan-integration-simplification.md  policy-engine.md  protocol-architecture.md  qom-evaluation-engine.md  qom-guide.md  quick-start.md  registry-architecture.md  regulated-enterprise-value.md  roadmap.md  security.md
docs/examples/calendar-workflow/: README.md
docs/examples/calendar-workflow/requests/: 01-handshake-client-hello.json  02-handshake-server-select.json  03-create-event-request.json
docs/examples/calendar-workflow/responses/: 01-create-event-success.json  02-create-event-qom-breach.json
docs/examples/calendar-workflow/stypes/: Event.v1.json  Query.v1.json
docs/examples/calendar-workflow/tools/: calendar.create.v1.json  calendar.read.v1.json
docs/examples/financial-advisor-workflow/: README.md
docs/examples/financial-advisor-workflow/profiles/: qom-strict-argcheck.json
docs/examples/financial-advisor-workflow/requests/: 01-handshake-client-hello.json  02-handshake-server-select.json  03-generate-recommendation-request.json
docs/examples/financial-advisor-workflow/responses/: 01-generate-recommendation-success.json  02-generate-recommendation-qom-breach.json
docs/examples/financial-advisor-workflow/stypes/: InvestmentRecommendation.v1.json  Query.v1.json
docs/examples/financial-advisor-workflow/tools/: advisor.query.v1.json  advisor.recommend.v1.json
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/community/: comparisons.md  contributing.md  index.md  roadmap.md
documentation/docs/concepts/: architecture.md  envelope.md  handshake.md  index.md  integration-modes.md  policy-engine.md  qom.md  registry.md  stypes.md
documentation/docs/deployment/: docker.md  index.md  kubernetes.md  production-checklist.md
documentation/docs/getting-started/: docker-compose.md  first-validation.md  index.md  installation.md  quick-start.md
documentation/docs/guides/: index.md
documentation/docs/guides/integration/: existing-infrastructure.md  mpl-with-a2a.md  mpl-with-mcp.md
documentation/docs/overview/: faq.md  glossary.md  how-it-works.md  use-cases.md  why-mpl.md
documentation/docs/reference/: cli.md  configuration.md  index.md  rest-api.md
documentation/docs/security/: adversarial-robustness.md  audit-trails.md  compliance.md  index.md  threat-model.md
documentation/docs/stylesheets/: extra.css
examples/: prometheus.yaml
examples/demo-server/: README.md  server.py
examples/finance-demo/: README.md  demo.py  demo.sh  mpl-config.yaml
examples/live-demo/: README.md  demo.py  mcp_server.py  pyproject.toml  run-demo.sh
examples/tutorials/: README.md
examples/tutorials/calendar-workflow/: README.md  calendar_client.py
examples/tutorials/multi-agent/: README.md  agent_workflow.py
examples/tutorials/rag-workflow/: README.md  rag_client.py
helm/mpl-proxy/: Chart.yaml  values.yaml
helm/mpl-proxy/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
python/: README.md  pyproject.toml
python/mpl_sdk/: __init__.py  client.py  errors.py  session.py
python/mpl_sdk/tests/: __init__.py  test_core.py  test_errors.py  test_session.py
registry/profiles/: qom-basic.json  qom-strict-argcheck.json
registry/tools/: tool.agent.execute.v1.json  tool.calendar.create.v1.json
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: client.ts  index.ts
typescript/src/errors/: index.ts
typescript/src/session/: session.ts
typescript/src/types/: envelope.ts  qom.ts  stype.ts
typescript/src/validation/: hash.ts  schema-validator.ts
typescript/tests/: qom.test.ts  stype.test.ts  validation.test.ts
(+67 files in other folders)
