[workspace]
resolver = "2"
members = [
    "crates/mpl-core",
    "crates/mpl-proxy",
    "crates/mpl-cli",
    "crates/mpl-python",
    "crates/mpl-registry-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/anthropics/mpl"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Schema validation
jsonschema = "0.18"

# Hashing
blake3 = "1.5"

# HTTP/WebSocket
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Testing
pretty_assertions = "1.4"

# MCP SDK
rmcp = { version = "0.8", features = ["server", "client", "transport-io", "transport-async-rw", "macros"] }
schemars = "1.1"

# A2A SDK
a2a-rs = { version = "0.1", features = ["server", "client", "http-client", "http-server"] }

# Hyper utilities
hyper-util = { version = "0.1", features = ["tokio"] }

# Config
config = "0.14"

# Metrics
prometheus = "0.13"

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async trait support
async-trait = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
