[workspace]
resolver = "2"
members = [
    "crates/mpl-protocol",
    "crates/mpl-proxy",
    "crates/mplx",
    "crates/mpl-python",
    "crates/mpl-registry-api",
    "crates/mpl-bench",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/Skelf-Research/mpl"
documentation = "https://docs.skelfresearch.com/mpl"
homepage = "https://docs.skelfresearch.com/mpl"
rust-version = "1.75"
keywords = ["mpl", "ai-agents", "semantic", "protocol", "validation"]
categories = ["development-tools", "api-bindings", "web-programming"]
readme = "README.md"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Schema validation
jsonschema = "0.18"

# Hashing
blake3 = "1.5"

# HTTP/WebSocket
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Python bindings
pyo3 = { version = "0.29", features = ["extension-module"] }

# Testing
pretty_assertions = "1.4"

# MCP SDK
rmcp = { version = "0.8", features = ["server", "client", "transport-io", "transport-async-rw", "macros"] }
schemars = "1.1"

# A2A SDK
a2a-rs = { version = "0.1", features = ["server", "client", "http-client", "http-server"] }

# Hyper utilities
hyper-util = { version = "0.1", features = ["tokio"] }

# Config
config = "0.14"

# Metrics
prometheus = "0.14"

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async trait support
async-trait = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
