[package]
name = "mpl-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core library for MPL: types, validation, hashing, and protocol primitives"

[lib]
name = "mpl_core"
path = "src/lib.rs"

[features]
default = []
python = ["pyo3"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
jsonschema.workspace = true
blake3.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
pyo3 = { workspace = true, optional = true }

# CEL expression evaluation for assertions
cel-interpreter = "0.10"

# Async trait support
async-trait.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
