[package]
name = "mpl-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Core library for MPL: types, validation, hashing, and protocol primitives"

[lib]
name = "mpl_core"
path = "src/lib.rs"

[features]
default = []
python = ["pyo3"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
jsonschema.workspace = true
blake3.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
pyo3 = { workspace = true, optional = true }

# CEL expression evaluation for assertions
cel-interpreter = "0.10"

# Async trait support
async-trait.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

# ---- benchmarks ----
# Hot paths the proxy hits per request/response. `cargo bench` (or
# `cargo criterion`) runs these; the CI release workflow could gate on
# regression once we have a baseline checked in.
[[bench]]
name = "semantic_hash"
harness = false

[[bench]]
name = "qom_compute"
harness = false
