[package]
name = "mpl-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Python bindings for MPL core library"

[lib]
name = "_mpl_core"
crate-type = ["cdylib"]

[dependencies]
mpl_core = { package = "mpl-protocol", path = "../mpl-protocol" }
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[build-dependencies]
pyo3-build-config = "0.22"
