[package]
name = "mpl-registry-api"
version = "0.1.0"
edition = "2021"
description = "MPL Registry API - REST service for SType discovery"
license = "Apache-2.0"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Caching
moka = { version = "0.12", features = ["sync", "future"] }

# Core library
mpl_core = { package = "mpl-protocol", path = "../mpl-protocol" }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
