[package]
name = "mplx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MPL CLI tools for registry management and validation"

[[bin]]
name = "mpl"
path = "src/main.rs"

[dependencies]
mpl_core = { package = "mpl-protocol", path = "../mpl-protocol" }
mpl-proxy = { path = "../mpl-proxy" }

# CLI
clap.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP/Web
reqwest.workspace = true
axum.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Time
chrono.workspace = true

# File system
walkdir = "2.5"

# Colors/formatting
colored = "2.1"
indicatif = "0.17"

# Utilities
shellexpand = "3.1"
open = "5.0"

# Hashing
sha2 = "0.10"

[dev-dependencies]
pretty_assertions.workspace = true
